solved spacing issue and added styling

--- a/app/style.css
+++ b/app/style.css
@@ -1,5 +1,8 @@
+body{
+	background-color: #b1b5ab;
+}
 h1{
-	font-family: 'Macondo', cursive;
+	font-family: 'Anton', sans-serif;
 	text-align: center;
 }
 
@@ -12,7 +15,7 @@ h1{
   right:0;
   width:30%;
   margin:0 1.5%;
-  background:#f0f0f0;
+  background:#a59a8f;
   border-radius: 3px;
   z-index:1;
 }
@@ -30,8 +33,10 @@ h1{
   overflow: hidden;
   padding: 0 20px;
   text-align: center;
-  background: #333;
-  color: #fff;
+  font-family: 'Anton', sans-serif;
+  font-size: 24px;
+  background: #6d584d;
+  color: #b1b5ab;
   border-radius: 3px 3px 0 0;
 }
 .board-col-content {
@@ -57,19 +62,13 @@ h1{
 .board-member-name {
   position: relative;
   padding: 20px;
-  background: #fff;
-  border-radius: 4px;
+  background: #61664e;
+  border-radius: 50%;
   text-align: center;
   font-size: 17px;
+  color: #a59a8f;
   cursor: pointer;
-  -webkit-box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
-  box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 3px 5px 0 rgba(0,0,0,0.4);
+  box-shadow: 0px 3px 5px 0 rgba(0,0,0,0.4);
 }
-.item.muuri-item-hidden {
-  z-index: 0;
-}
-.item-content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
+
